--- a/pom.xml
+++ b/pom.xml
@@ -1,94 +1,80 @@
 #first install open-jdk
 #sudo apt install openjdk-17-jdk -y
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.example</groupId>
-  <artifactId>product-catalogue</artifactId>
+  <groupId>com.howtodoinjava.app</groupId>
+  <artifactId>hello-world-example</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Product Catalogue</name>
-  <description>A microservice for managing product catalogues using Dropwizard and Guice</description>
+  <name>hello-world-example</name>
+  <url>https://howtodoinjava.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-    <dropwizard.version>2.1.0</dropwizard.version>
-    <guice.version>5.1.0</guice.version>
+    <java.version>17</java.version>
+    <dropwizard.version>1.0.0</dropwizard.version>
   </properties>
 
   <dependencies>
-    <!-- Dropwizard Core -->
     <dependency>
       <groupId>io.dropwizard</groupId>
       <artifactId>dropwizard-core</artifactId>
-      <version>${dropwizard.version}</version>
+      <version>4.0.0</version>
     </dependency>
-
-    <!-- Dropwizard Jetty (needed for connector types like 'http') -->
     <dependency>
       <groupId>io.dropwizard</groupId>
-      <artifactId>dropwizard-jetty</artifactId>
-      <version>${dropwizard.version}</version>
+      <artifactId>dropwizard-client</artifactId>
+      <version>4.0.0</version>
     </dependency>
-
-    <!-- Google Guice -->
     <dependency>
-      <groupId>com.google.inject</groupId>
-      <artifactId>guice</artifactId>
-      <version>${guice.version}</version>
-    </dependency>
-
-    <!-- JUnit for Testing -->
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>5.8.2</version>
-      <scope>test</scope>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.26</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
-
   <build>
+    <finalName>DropWizardExample-${version}</finalName>
     <plugins>
-      <!-- Maven Shade Plugin to create a fat jar -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>11</source>
+          <target>11</target>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.4</version>
+        <version>3.2.0</version>
         <executions>
           <execution>
             <phase>package</phase>
-            <goals><goal>shade</goal></goals>
+            <goals>
+              <goal>shade</goal>
+            </goals>
             <configuration>
-              <createDependencyReducedPom>false</createDependencyReducedPom>
               <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>com.example.productcatalogue.App</mainClass>
+                  <mainClass>com.howtodoinjava.app.App</mainClass>
+                </transformer>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer">
                 </transformer>
               </transformers>
             </configuration>
           </execution>
         </executions>
       </plugin>
-
-      <!-- Java Compiler Plugin -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
-        <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
-        </configuration>
-      </plugin>
     </plugins>
+  </build>
+</project>
   </build>
 
 </project>
